--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "jasmine": "^2.4.1",
     "jshint": "^2.9.1",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7",
     "serve-static": "^1.10.2"
   }
 }
